--- a/src/package.json
+++ b/src/package.json
@@ -6,17 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
-    "dotenv": "^1.2.0",
-    "express": "~4.0.0",
-    "jade": "~1.3.0",
-    "morgan": "~1.0.0",
+    "body-parser": "~1.19.0",
+    "cookie-parser": "~1.4.5",
+    "debug": "~4.3.1",
+    "dotenv": "^8.2.0",
+    "express": "~4.17.1",
+    "jade": "~1.11.1",
+    "morgan": "~1.10.0",
     "sanntid": "git://github.com/sconrads/sanntid.git#master",
-    "squeezenode": "0.0.9",
-    "static-favicon": "~1.0.0",
-    "telldus-live": "^0.2.1",
-    "yr.no-forecast": "0.0.7"
+    "squeezenode": "0.1.0",
+    "static-favicon": "~2.0.0-alpha",
+    "telldus-live": "^0.3.0",
+    "yr.no-forecast": "2.1.0"
   }
 }
